<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.victor_pc.tictactoe.model.User">
        </variable>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="30dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_person_black_24dp"
                    android:background="@drawable/border"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.username}"
                        tools:text="Username"
                        android:textColor="@color/white"
                        android:paddingLeft="20dp"
                        android:textSize="25dp"/>

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtUsername"
                        android:text="@{viewModel.email}"
                        tools:text="Halo"
                        android:textColor="@color/white"
                        android:paddingLeft="20dp"
                        android:textSize="20dp"
                        android:layout_centerInParent="true"/>

                    <Button
                        android:id="@+id/btnLogout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Logout"
                        android:textSize="25dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="35dp"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="@{@string/total_matches(viewModel.totalMatch)}"
                    android:textColor="@color/white"
                    tools:text="@string/total_matches"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="@{@string/total_win(viewModel.win)}"
                    tools:text="@string/total_win"
                    android:textColor="@color/white"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="@{@string/total_lose(viewModel.lose)}"
                    tools:text="@string/total_lose"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_add_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_above="@id/btnPlay"/>

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="PLAY WITH BOT"
                android:textSize="40dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:background="@color/blue"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </RelativeLayout>

</layout>
