<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="board"
            type="com.example.victor_pc.tictactoe.model.GameBoard">
        </variable>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.55">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/rl2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerInParent="true">

                        <TextView
                            android:id="@+id/tvYourTurn1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/me"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:textColor="@color/black"
                            />

                        <TextView
                            android:id="@+id/tvPlayerTurn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/yourTurn"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:textColor="@color/red"
                            android:visibility="@{board.playerTurnVisibility}"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/rl1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerInParent="true">

                        <TextView
                            android:id="@+id/tvBotTurn1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@{@string/bot(board.botName)}"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:textColor="@color/black"
                            />

                        <TextView
                            android:id="@+id/tvBotTurn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/botTurn"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:textColor="@color/blue"
                            android:visibility="@{board.botTurnVisibility}"/>

                    </LinearLayout>

                </RelativeLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/parentButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:layout_margin="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/square_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/game_border"/>

                <Button
                    android:id="@+id/square_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/game_border"/>

                <Button
                    android:id="@+id/square_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/game_border"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/square_4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/game_border"/>

                <Button
                    android:id="@+id/square_5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/game_border"/>

                <Button
                    android:id="@+id/square_6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/game_border"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/square_7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/game_border"/>

                <Button
                    android:id="@+id/square_8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/game_border"/>

                <Button
                    android:id="@+id/square_9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/game_border"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/youWin"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    android:layout_marginBottom="15dp"
                    android:visibility="@{board.statusVisibility}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraint_buttonPlayAndQuit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{board.buttonPlayAndQuitVisibility}">

                    <Button
                        android:id="@+id/btnPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Play"
                        android:textSize="25dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/btnQuit"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:background="@color/green"/>

                    <Button
                        android:id="@+id/btnQuit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Quit"
                        android:textSize="25dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/btnPlay"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:background="@color/green"/>

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>